MET-2018_MET-5083 simplify case check invalid url dereference (#599)